# slice_view

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic.cpp
include/dd/: cached_iterator.hpp  maybe_present.hpp  non_propagating_cache.hpp  slice_view.hpp  type_traits.hpp
tests/: CMakeLists.txt  test_main.cpp  test_maybe_present.cpp  test_non_propagating_cache.cpp  test_slice_view.cpp
